Apply the correct inline spacing for testimonial in mobile
https://github.com/elifesciences/enhanced-preprints-issues/issues/1280

--- a/assets/sass/patterns/molecules/testimonial-with-link.scss
+++ b/assets/sass/patterns/molecules/testimonial-with-link.scss
@@ -1,7 +1,7 @@
 @import "../../definitions";
 
 .testimonial-with-link {
-  @include padding($site-spacing, "inline");
+  @include padding($site-spacing-medium, "inline");
   background-color: $color-homepage-tinted-background;
 }
 
